add user and notification cont

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue boolzapp</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,18 +16,72 @@
     </div>
 
     <div id="app">
+        <!-- side-bar -->
         <div class="side-bar">
 
+            <!-- user account -->
+            <div class="user-account">
+                <img src="img/avatar_io.jpg" alt="avatar user" class="user-image">
+                <div class="user-name">
+                    Sofia
+                </div>
+                <div class="icons">
+                    <i class="fa-solid fa-circle-notch"></i>
+                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
+
+            <!-- notification container -->
+            <div class="notification">
+
+                <div class="icon-notif">
+                    <i class="fa-solid fa-bell-slash"></i>
+                </div>
+
+                <div class="content-notif">
+                    <div class="title-notif">
+                        Ricevi notifiche di nuovi messaggi
+                    </div>
+
+                    <a href="#!" class="active-notif">
+                        Attiva notifiche desktop
+                    </a>
+                </div>
+            </div>
+
+            <!-- search friend bar -->
+            <div class="search-friend">
+
+            </div>
+            <!-- friend bar -->
+            <div class="friend-bar">
+                <div class="friend">
+                    <img src="#!" alt="">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+
+                        </div>
+
+                        <div class="last-message">
+
+                        </div>
+
+                        <div class="time-last-message">
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
         </div>
 
+        <!-- content-bar -->
         <div class="content-bar">
-            
+
         </div>
-
-
-
-
-
 
     </div>
 
