add search friend

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
             <!-- search friend bar -->
             <div class="search-friend">
 
+                <div class="icon-search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+
+                <input type="text" class="input-search" placeholder="Cerca o inizia una nuova chat">
             </div>
+
             <!-- friend bar -->
             <div class="friend-bar">
                 <div class="friend">
