--- a/index.html
+++ b/index.html
@@ -62,25 +62,179 @@
 
             <!-- friend bar -->
             <div class="friend-bar">
+
                 <div class="friend">
-                    <img src="#!" alt="">
+                    <img src="img/avatar_1.jpg" alt="avatar 1">
 
                     <div class="friend-details">
                         <div class="friend-name">
-
+                            Michele
                         </div>
 
                         <div class="last-message">
-
+                            Ultimo messaggio inviato
                         </div>
 
-                        <div class="time-last-message">
-
+                        <div class="time-message">
+                            12.00
                         </div>
-
                     </div>
 
                 </div>
+
+                <div class="friend">
+                    <img src="img/avatar_2.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Fabio
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="friend">
+                    <img src="img/avatar_3.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Samuele
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="friend">
+                    <img src="img/avatar_4.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Alessandro B.
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="friend">
+                    <img src="img/avatar_5.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Alessandro L.
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="friend">
+                    <img src="img/avatar_6.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Claudia
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="friend">
+                    <img src="img/avatar_7.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Federico
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="friend">
+                    <img src="img/avatar_8.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Davide
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- <div class="friend">
+                    <img src="img/avatar_8.jpg" alt="avatar 1">
+
+                    <div class="friend-details">
+                        <div class="friend-name">
+                            Davide
+                        </div>
+
+                        <div class="last-message">
+                            Ultimo messaggio inviato
+                        </div>
+
+                        <div class="time-message">
+                            12.00
+                        </div>
+                    </div>
+
+                </div> -->
+
+
             </div>
         </div>
 
