add content message

--- a/index.html
+++ b/index.html
@@ -241,6 +241,41 @@
         <!-- content-bar -->
         <div class="content-bar">
 
+            <!-- friend selected -->
+            <div class="friend-selected">
+
+                <img src="img/avatar_1.jpg" alt="avatar 1">
+
+                <div class="friend-details">
+                    <div class="friend-name">
+                        Michele
+                    </div>
+
+                    <div class="last-message">
+                        Ultimo messaggio inviato alle 12.00
+                    </div>
+                </div>
+
+                <div class="icons-selected-user">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-paperclip"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+                
+
+            </div>
+
+            <!-- content message -->
+            <div class="content-message">
+
+            </div>
+
+            <!-- text inner message -->
+            <div class="text-inner-message">
+                <i class="fa-solid fa-face-smile"></i>
+                <input type="text" class="text-message" placeholder="Scrivi un messaggio">
+                <i class="fa-solid fa-microphone"></i>
+            </div>
         </div>
 
     </div>
