--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <i class="fa-regular fa-face-smile"></i>
 
                 <!-- input message user -->
-                <input type="text" class="text-message" placeholder="Scrivi un messaggio" v-model="userValue" @keyup.enter="sendMessage()">
+                <input type="text" class="text-message" placeholder="Scrivi un messaggio" v-model="object.text" @keyup.enter="functions()">
                 
                 <i class="fa-solid fa-microphone"></i>
             </div>
