add scrolling messages

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
 
             <!-- content messages middle screen -->
-            <div class="content-message">
+            <div class="content-message" ref="container">
 
                 <div class="row-message">
 
